# french-exit

./: .gitignore  AGENTS.md  README.md  backend.py  decisions.md  env_check.py  index.html  lessons-learned.md  main.py  notes.md  package-lock.json  package.json  playwright.config.ts  prompt.md  requirements.txt  session-log.md  status.md  tailwind.config.js  troubleshooting.md  ucrtbase.def  vite.config.ts
docs/: brief.md  high-Level Design.md  proposal.md  vibe-coding-sop.md
docs/tasks/: auto-pilot-instructions.md  final-report.md  summary-for-next-session.md  task-M01.md  task-M02.md  task-M03.md  task-M04.md  (+16 more)
e2e/: boundary-flows.spec.ts  error-boundary.spec.ts  fixtures.ts  full-flow.spec.ts  results-interactions.spec.ts  tauri-mock.js
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: Action.ts  Decision.ts  ExecutionReport.ts  ExecutionResult.ts  ExecutionStatus.ts  PaginatedResult.ts  PreviewResult.ts  ProgressEvent.ts  ResourceConfig.ts  ScanResultSummary.ts  SessionState.ts  TraceCategory.ts  TraceItem.ts
src-tauri/src/: error.rs  lib.rs  types.rs  webview2_fallback.rs
src-tauri/src/commands/: handlers.rs  mod.rs
src-tauri/src/executor/: delete.rs  mod.rs  pack.rs  preserve.rs  secure_erase.rs
src-tauri/src/orchestrator/: mod.rs
src-tauri/src/reporter/: mod.rs
src-tauri/src/resource/: controller.rs
src-tauri/src/scanner/: browser.rs  chat.rs  devtools.rs  env.rs  fs.rs  mod.rs  registry.rs  registry_sys.rs  system.rs
src-tauri/src/store/: mod.rs  temp_store.rs
ui/: __init__.py  eel_app.py
(+24 files in other folders)
