[package]
name = "french-exit"
version = "0.1.0"
description = "French Exit — 离职清理工具"
authors = ["French Exit Team"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2" }

[dependencies]
tauri = { version = "2.11.2" }
tauri-plugin-log = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.12", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ts-rs = { version = "10.1", features = ["chrono-impl", "uuid-impl"] }
tokio = { version = "1.43", features = ["full"] }
rand = "0.8"
walkdir = "2.5"
zip = "2.2"
rusqlite = { version = "0.34", features = ["bundled"] }
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_System_Registry"] }

[dev-dependencies]
tempfile = "3.16"
